fix: overflowing metrics for kpi charts (#18683)

--- a/openmetadata-ui/src/main/resources/ui/src/components/MyData/Widgets/KPIWidget/kpi-widget.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/MyData/Widgets/KPIWidget/kpi-widget.less
@@ -21,5 +21,6 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    overflow-y: scroll;
   }
 }
